--- a/src/Month.css
+++ b/src/Month.css
@@ -1,35 +1,44 @@
-.slide-left-enter {
+.rm_calendarMonth-cell {
+    text-align: center;
+    width: 43px;
+    cursor: pointer;
+}
+.rm_calendarMonth-weekdayHead {
+    color: green;
+}
+
+.rm_slide-left-enter {
     transform: translate(-100%);
 }
-.slide-left-enter.slide-left-enter-active {
+.rm_slide-left-enter.rm_slide-left-enter-active {
     transform: translate(0%);
     transition: transform 100ms ease-in-out;
 }
-.slide-left-leave {
+.rm_slide-left-leave {
     position: absolute;
     top: 0;
     left: 0;
     transform: translate(0%);
 }
-.slide-left-leave.slide-left-leave-active {
+.rm_slide-left-leave.rm_slide-left-leave-active {
     transform: translate(100%);
     transition: transform 100ms ease-in-out;
 }
 
-.slide-right-enter {
+.rm_slide-right-enter {
     transform: translate(100%);
 }
-.slide-right-enter.slide-right-enter-active {
+.rm_slide-right-enter.rm_slide-right-enter-active {
     transform: translate(0%);
     transition: transform 100ms ease-in-out;
 }
-.slide-right-leave {
+.rm_slide-right-leave {
     position: absolute;
     top: 0;
     left: 0;
     transform: translate(0%);
 }
-.slide-right-leave.slide-right-leave-active {
+.rm_slide-right-leave.rm_slide-right-leave-active {
     transform: translate(-100%);
     transition: transform 100ms ease-in-out;
 }
